# TTOR

./: .gitignore  Cargo.toml  README.md
ch01/vs_ruby_demo/: Cargo.toml
ch02/answer_sum_demo/: Cargo.toml
ch02/basic_type_demo/: Cargo.toml
ch02/closure_func_demo/: Cargo.toml
ch02/expr_demo/: Cargo.toml
ch02/expr_demo/src/: main.rs
ch02/fizz_buzz_demo/: Cargo.toml
ch02/func_ptr_demo/: Cargo.toml
ch02/lexical_scope_demo/: Cargo.toml
ch02/ref_oper_demo/: Cargo.toml
ch02/structure_type_demo/: Cargo.toml
ch02/temp_demo/: Cargo.toml
ch03/type_generics_demo/: Cargo.toml
ch03/type_overview_demo/: Cargo.toml
ch03/type_trait_obj_demo/: Cargo.toml
ch04/comm_mem_manager_demo/: Cargo.toml
ch05/borrow_demo/: Cargo.toml
ch05/trait_lifetime_demo/: Cargo.toml
ch06/closure_fnptr_demo/: Cargo.toml
ch06/closure_impl_demo/: Cargo.toml
ch06/closure_ownership_demo/: Cargo.toml
ch06/iterator_type_demo/: Cargo.toml
ch06/raw_identifier_demo/: Cargo.toml
ch07/design_pattern_demo/: Cargo.toml
ch07/oo_type_demo/: Cargo.toml
ch07/raii_demo/: Cargo.toml
ch08/simple_container_demo/: Cargo.toml
ch08/simple_str_demo/: Cargo.toml
ch09/simple_assert_demo/: Cargo.toml
ch09/simple_result_demo/: Cargo.toml
ch10/csv_challenge/: Cargo.toml  Readme.txt
ch10/simple_regex_demo/: Cargo.toml
ch10/static_hashmap/: Cargo.toml
ch10/static_hashmap_2021/: Cargo.toml
ch11/build_thread_demo/: Cargo.toml
ch11/create_thread_demo/: Cargo.toml
ch11/flip_coin_demo/: Cargo.toml
ch11/posion_thread_demo/: Cargo.toml
ch11/pow/: Cargo.toml
ch11/simple_channel_demo/: Cargo.toml
ch11/simple_crossbeam_demo/: Cargo.toml
ch11/simple_crossbeam_select_demo/: Cargo.toml
(+80 files in other folders)
